tests/compiler_diag_runtime_error_at_bad.hop
// Verifies runtime behavior for compiler diagnostic error at.
import "compiler"

fn runtime_error_at() {
	compiler.error_at(source_location_of(MARK), "runtime anchored")
}

const MARK int = 1
